ajustes de codigo

--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
                 </div>
                 <div class="nameData">
                     <h1>Marco Velasquez Figarella</h1>
-                    <p>Soy un profesional en el área de la tecnología enfocado en programación Web y con varios años de experiencia en diferentes actividades.</p>
-                    <p>Determinado a seguir creciendo y mejorando, en el ámbito profesional y personal.</p>
+                    <p>Soy un profesional en el área de la programación web, especialmente en frontend y con conocimientos en backend, poseo varios años de experiencia en diferentes actividades.</p>
+                    <p>Estoy determinado a seguir creciendo y mejorando, en el ámbito profesional y personal.</p>
+                    <p>Busco implementar todo mi potencian y conocimientos en el desarrollo con React, así como en las diferentes tecnologías que eh adquirido y que sigo adquiriendo.</p>
                 </div>
             </div>
             <div class="habilidades">
