open graph para compartir en redes sociales.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:site_name" content="Portafolio"/>
+    <meta property="og:title" content="Portafolio | Marco Velasquez Figarella"/>
+    <meta property="og:description" content="En este portafolio se habla un poco de mi, mis habilidades, experienias y medios de contacto."/>
+    <meta property="og:image" content="./assets/proyects/portafolio/desktop.webp">
+    <meta property="og:url" content="https://marco90v.github.io/Portafolio/">
+    <meta property="og:type" content="Landing Page"/>
     <title>Portafolio | Marco Velasquez Figarella</title>
+    <link rel="icon" type="image/x-icon" href="./assets/foto/myAvatarMovil.png">
     <link rel="preconnect" href="./assets/fonts/Hack Regular Nerd Font Complete Mono.ttf">
     <link rel="stylesheet" href="style.css">
 </head>
