cambio de og:image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:site_name" content="Portafolio"/>
     <meta property="og:title" content="Portafolio | Marco Velasquez Figarella"/>
     <meta property="og:description" content="En este portafolio se habla un poco de mi, mis habilidades, experienias y medios de contacto."/>
-    <meta property="og:image" content="./assets/proyects/portafolio/desktop.webp">
+    <meta property="og:image" content="./cap.png">
     <meta property="og:url" content="https://marco90v.github.io/Portafolio/">
     <meta property="og:type" content="Landing Page"/>
     <title>Portafolio | Marco Velasquez Figarella</title>
