se agrego analiticas de google

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <link rel="icon" type="image/x-icon" href="./assets/foto/myAvatarMovil.png">
     <link rel="preconnect" href="./assets/fonts/Hack Regular Nerd Font Complete Mono.ttf">
     <link rel="stylesheet" href="style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-32T3P2HMPK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-32T3P2HMPK');
+    </script>
 </head>
 <body>
     <div class="overlay">
