se modifico icono de cerrar y colores

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <link rel="preconnect" href="./assets/fonts/Hack Regular Nerd Font Complete Mono.ttf">
     <link rel="stylesheet" href="style.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-32T3P2HMPK"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-32T3P2HMPK"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'G-32T3P2HMPK');
-    </script>
+    </script> -->
 </head>
 <body>
     <div class="overlay">
@@ -96,14 +96,14 @@
                 <div class="barra">
                     <p>Marco90v@Developer:~$</p>
                     <picture>
-                        <source media="(min-width: 1024px)" srcset="./assets/icons-desktop/close_32px.png">
                         <source media="(max-width: 1023px)" srcset="./assets/icons-movil/avatar.png">
                         <img src="./assets/icons-movil/avatar.png" alt="avatar|close">
                     </picture>
+                    <div class="close"></div>
                 </div>
                 <div class="comando">
                     <p>Marco90v@Developer:~$</p>
-                    <span>neofetch &nbsp;<span id="typed"></span></span>
+                    <span>whoami &nbsp;<span id="typed"></span></span>
                 </div>
                 <div class="avatar">
                     <picture>
@@ -112,20 +112,15 @@
                 </div>
                 <div class="nameData">
                     <h1>Marco Velasquez Figarella</h1>
-                    <p>Soy un profesional en el área de la programación web, especialmente en frontend y con conocimientos en backend, poseo varios años de experiencia en diferentes actividades.</p>
+                    <p>Soy profesional en el área de la programación web, especialmente en frontend y con conocimientos en backend, poseo varios años de experiencia en diferentes actividades.</p>
                     <p>Estoy determinado a seguir creciendo y mejorando, en el ámbito profesional y personal.</p>
-                    <p>Busco implementar todo mi potencian y conocimientos en el desarrollo con React, así como en las diferentes tecnologías que eh adquirido y que sigo adquiriendo.</p>
+                    <p>Busco implementar todo mi potencial y conocimientos en el desarrollo con React, así como en las diferentes tecnologías que eh aprendido y que sigo aprendiendo.</p>
                 </div>
             </div>
             <div class="habilidades">
                 <div class="barra">
                     <h1>Habilidades</h1>
-                    <picture>
-                        <img id="menuHabilidades" src="./assets/icons-movil/menu_archive.png" alt="menuArchive">
-                    </picture>
-                    <picture>
-                        <img id="menuHabilidades" src="./assets/icons-desktop/close_32px.png" alt="close">
-                    </picture>
+                    <div class="close"></div>
                 </div>
                 <div class="almacenamientoInterno">
                     <picture>
@@ -135,15 +130,16 @@
                         <img src="./assets/icons-movil/arrow_right.png" alt="Arrow right">
                     </picture>
                     <h2>Almacenamiento interno</h2>
+                    <picture>
+                        <img id="menuHabilidades" src="./assets/icons-movil/menu_archive.png" alt="menuArchive">
+                    </picture>
                 </div>
                 <ul id="skills" class="list"></ul>
             </div>
             <div class="proyectos">
                 <div class="barra">
                     <p>Proyectos</p>
-                    <picture>
-                        <img id="menuHabilidades" src="./assets/icons-desktop/close_32px.png" alt="close">
-                    </picture>
+                    <div class="close"></div>
                 </div>
                 <div class="barNavigation">
                     <h1></h1>
@@ -166,9 +162,7 @@
                 <div class="barGallery">
                     <p>Retos</p>
                     <h1></h1>
-                    <picture>
-                        <img id="menuHabilidades" src="./assets/icons-desktop/close_32px.png" alt="close">
-                    </picture>
+                    <div class="close"></div>
                 </div>
                 <div class="panel">
                     <img id="menuHabilidades" src="./assets/icons-desktop/explorer_32px.png" alt="Explorador">
@@ -192,9 +186,7 @@
             <div class="contacto">
                 <div class="barTelegram">
                     <h1>Contacto</h1>
-                    <picture>
-                        <img id="menuHabilidades" src="./assets/icons-desktop/close_32px.png" alt="close">
-                    </picture>
+                    <div class="close"></div>
                 </div>
                 <ul>
                     <li>
